Fix delete button jumping when hovering tasks

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -91,7 +91,7 @@ input.todo-checkbox {
 
 .todo {
     float: left;
-    width: 88%;
+    width: 87%;
 }
 
 .delete {
